2010-05-05	Alin Rus <alin.codejunkie@gmail.com>

	PR 1510/doc
	* user/chains.t: Fix code example.

2010-04-22	Alin Rus <alin.codejunkie@gmail.com>

	* user/chain.t: Fixed the example from PR 1504.

2010-03-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: CONFIGURE_DISABLE_CLASSIC_NOTEPADS is typo of
	CONFIGURE_DISABLE_CLASSIC_API_NOTEPADS. Fix it.

2010-02-18	Chris Johns <chrisj@rtems.org>

	* networking/networkapp.t: Updated the BOOTP/DHCP to document the
	default behaviour of looping forever.

2010-01-11	Marc Pignat <marc.pignat@hevs.ch>

	PR 1490/doc
	* user/clock.t: Fix typo. rtems_clock_get_ticks_per_second not
	rtems_clock_get_ticks_per_seconds.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/clock.t: Eliminate unused type rtems_clock_time_value.

2009-12-16	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* bsp_howto/console.t: adaption to ssize_t return value for
	my_driver_write() function

2009-11-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1460/cpukit
	* user/object.t: Change return type on methods accessing portions of
	RTEMS Ids to int. This allows -1 to be return on error.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/Makefile.am, ada_user/ada_user.texi, user/Makefile.am,
	user/c_user.texi, user/concepts.t, user/overview.t,
	user/preface.texi, user/schedule.t, user/sem.t: Add table of figures.
	Add text and graphic of tree illustrating valid combinations of
	semaphore attributes.
	* user/semaphore_attributes.eps, user/semaphore_attributes.png:
	New files.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/console.t: Capitalization.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/preface.texi: Remove UNIX and update port list.

2009-10-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* HELP.html, bsp_howto/support.t, relnotes/status.texi,
	started_ada/buildada.t: Remove references to posix/Unix port.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>
